--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main {
   height: 612px;
   color: darkblue;
   background: white;
-  background-image: url(imagenes/Capture.PNG);
+  background-image: url(Capture.PNG);
   background-repeat: no-repeat;
   background-position: center;
   border: none;
